# NEXUS

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.sandbox  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.github/workflows/: ci-cd.yml
app/: cache.py  config.py  conversations.py  copilot.py  eval_results.py  evals.py  events.py  main.py  mcp.py  memory.py  models.py  registry.py  sessions.py  streaming.py  tasks.py  traces.py  workflows.py
app/agents/: builder.py  cerebro.py  factory.py
app/agents/deep/: configs.py  loop_detection.py  middleware.py
app/agents/deep/workspace/: DEEP.md
app/agents/definitions/: __init__.py  content_writer.py  data_analyst.py  deep_tools.py  developer.py  general_assistant.py  research_analyst.py  social_media.py  web_monitor.py
app/agents/knowledge/api-design/: SKILL.md
app/agents/knowledge/coding/: SKILL.md
app/agents/knowledge/content/: SKILL.md
app/agents/knowledge/deployment/: SKILL.md
app/agents/knowledge/docker-infra/: SKILL.md
app/agents/knowledge/hetzner-platform/: SKILL.md
app/agents/knowledge/monitoring/: SKILL.md
app/agents/knowledge/performance-optimization/: SKILL.md
app/agents/knowledge/postgres-pgvector/: SKILL.md
app/agents/knowledge/python-fastapi/: SKILL.md
app/agents/knowledge/research/: SKILL.md
app/agents/knowledge/security-audit/: SKILL.md
app/agents/knowledge/testing-strategy/: SKILL.md
app/agents/knowledge/typescript-nextjs/: SKILL.md
app/tools/: __init__.py  brain.py  brain_toolset.py  coding_mcps.py  github_toolset.py  graphiti_native.py  graphiti_toolset.py  langchain_tools.py  lsp_toolset.py  playwright_toolset.py  registry.py  remember_toolset.py  search_providers.py
docs/: SYSTEM.md
evals/: run_eval.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/agents/: route.ts
frontend/src/app/api/conversations/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/: ChatPersistence.tsx  ConversationSidebar.tsx  ErrorBoundary.tsx  RightPanel.tsx  Sidebar.tsx  StatusBar.tsx
frontend/src/components/chat/: ApprovalModal.tsx  ChatPanel.tsx  ToolCallBlock.tsx
frontend/src/components/generative-ui/: AgentCard.tsx  CerebroPipelineView.tsx  MemoryList.tsx  StateRenderers.tsx
frontend/src/components/panels/: DiffViewer.tsx  FileTree.tsx  RightPanel.tsx  TerminalView.tsx  TodoProgress.tsx
frontend/src/components/sidebar/: AgentSelector.tsx  SessionList.tsx
frontend/src/components/workflow/: AgentNode.tsx  WorkflowCanvas.tsx  layout.ts
frontend/src/hooks/: useAgentStream.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
frontend/src/stores/: nexus.ts
init-db/: 01-create-databases.sh  02-nexus-agents.sql  03-nexus-runs.sql
scripts/: backup-postgres.sh
(+27 files in other folders)
