[project]
name = "nexus"
version = "0.4.0"
description = "NEXUS - Self-hosted AI agent builder platform"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    # Agent framework — extras live on pydantic-ai-slim, not the fat package
    "pydantic-ai-slim[groq,anthropic,mcp,logfire,ag-ui]>=1.68.0",
    "pydantic-deep[web-tools,sandbox]>=0.2.20",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "gunicorn>=23.0.0",
    # Database
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.0",
    # Memory (Mem0 + Voyage AI embeddings via API)
    "mem0ai>=0.1.90",
    "voyageai>=0.3.0",
    # Observability
    "logfire[fastapi]>=4.0.0",
    # Phoenix AI observability (tracing, evals, prompt management)
    "arize-phoenix-otel>=0.9.0",
    "openinference-instrumentation-pydantic-ai>=0.1.0",
    # Utilities
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "redis>=5.0.0",
    # Web search (DuckDuckGo as free fallback, Tavily for quality)
    "duckduckgo-search>=7.0.0",
    # LangChain community tools (Wikipedia, Arxiv, PubMed)
    "langchain-community>=0.3.0",
    "wikipedia>=1.4.0",
    "arxiv>=2.1.0",
    "xmltodict>=0.14.0",
    # Graphiti temporal knowledge graph (native Python, no MCP)
    "graphiti-core[falkordb]>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.390",
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
extraPaths = ["/pulumi-agent/.venv/lib/python3.13/site-packages"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
